--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.7.4",
-    "typescript": "^5.6.2",
     "aws-sdk": "^2.1691.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -17,6 +14,5 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
