--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "aws-sdk": "^2.1691.0",
     "cookie-parser": "~1.4.4",
+    "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
-  },
-  "devDependencies": {}
+    "morgan": "~1.9.1",
+    "uuid": "^10.0.0"
+  }
 }
